--- a/src/index.css
+++ b/src/index.css
@@ -23,10 +23,15 @@ html {
    {
      height:100%;
    }
+  .crd 
+  {
+    height:40%;
+    width:80%;
+  }
   .bgr 
    {
      
-     width:65%;
+     width:100%;
    }
   .gbt{
      width:100%;
