--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,19 @@ code {
 html {
   scroll-behavior: smooth;
 }
+.borderfoto {
+  flex-shrink: 0;
+  margin: 0px;
+  border: calc(1px + 0.2vw) solid transparent;
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  background-size: cover;
+  box-sizing: border-box;
+  box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.5);
+}
+.borderfoto-1 {
+  border-radius: 50%;
+}
 @media screen and (min-width: 320px) {
   .res 
    {
